--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <div class="nav">
             <div class="title">
-                <h1>my page</h1>
+                <h1>soyeon's page</h1>
             </div>
             <ul class="menu">
                 <li><a href="#intro">ABOUT</a></li>
@@ -29,29 +29,40 @@
         <div class="background">
             <h2>👋 안녕하세요</h2>
             <p>광운대학교 정보융합학부 재학 중인 김소연입니다.</p>
-            <br />
+        </div>
+        <div>
             <p class="subtitle">목표</p>
             <p>웹 프론트엔드 개발자</p>
             <br />
             <p class="subtitle">취미</p>
             <p>음악 감상, 유튜브 시청</p>
-            <div class="musicBox">
-                <p>좋아하는 노래 </p>
-                <a href="https://youtu.be/RowlrvmyFEk?si=U6OuGRrLDj2BG2_J" target="_blank"><i
-                        class="fa-brands fa-youtube"></i> music</a>
-            </div>
+        </div>
+        <div class="musicBox">
+            <p style="margin-right: 10px;">좋아하는 노래 </p>
+            <a href="https://youtu.be/RowlrvmyFEk?si=U6OuGRrLDj2BG2_J" target="_blank"><i
+                    class="fa-brands fa-youtube"></i> music</a>
         </div>
         <div class="ctrlImg">
             <p class="subtitle">🐶 반려동물 - 겨울이</p>
-            <button class="hideImg">^ 사진 숨기기</button>
-            <button class="showImg">^ 사진 보기</button>
+            <ul class="dogBtns">
+                <li class="on">1번 사진</li>
+                <li>2번 사진</li>
+                <li>3번 사진</li>
+                <li>4번 사진</li>
+            </ul>
         </div>
         <div class="Imgs">
-            <div class="dog" id="dog">
+            <div class="on" id="dog">
                 <img src="./img/겨울이.jpg" alt="dog">
             </div>
             <div class="dog" id="dog">
-                <img src="./img/겨울이1.jpg" alt="">
+                <img src="./img/겨울이2.jpg" alt="">
+            </div>
+            <div class="dog" id="dog">
+                <img src="./img/겨울이3.jpg" alt="">
+            </div>
+            <div class="dog" id="dog">
+                <img src="./img/겨울이4.jpg" alt="">
             </div>
         </div>
     </div>
@@ -80,7 +91,8 @@
             <div class="footer">
                 <div class="foot">
                     <p>contact </p>
-                    <a href="" class="contact"><i class="fa-regular fa-envelope"></i> btj5420@naver.com
+                    <a href="mailto:btj5420@naver.com" class="contact"><i class="fa-regular fa-envelope"></i>
+                        btj5420@naver.com
                     </a>
                 </div>
                 <div class="foot">
